estilizando a página e aplicando js para criar o evento de light e dark mode

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>light and dark</h2>
 
         <div>
-            <input type="checkbox" name="change-theme" id="chenge-theme">
+            <input type="checkbox" name="change-theme" id="change-theme">
             <!-- curiosidade: a label usarei para conseguir clicar e ativar o light e dark mode -->
             <label for="change-theme">
                 <i class="bi bi-sun"></i>
