finalizando a estilização da página no modo light

--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
             <!-- fim do card-image -->
 
             <!-- card com as informações do produto -->
-            <div class="card-datails">
+            <div class="card-details">
                 <h2>Tênis Nike</h2>
                 <p class="subtitle">Exelente para corridas</p>
                 <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga quod debitis id
                     quia ad unde veniam dolor, et iure suscipit fugiat, at modi velit! Deleniti laborum porro molestias
                     ut dolor?</p>
+                <!-- container para o preço e o botao -->
+                <div class="price-container">
+                    <span class="prince">R$299,99</span>
+                    <button class="btn">Comprar</button>
+                </div>
             </div>
             <!-- fim do card-details -->
 
-            <!-- container para o preço e o botao -->
-            <div class="prince-container">
-                <span class="prince">R$299,99</span>
-                <button class="btn">Comprar</button>
-            </div>
+
+
         </div>
     </main>
 
